# plash-gtk-apps

./: Cargo.toml
applist/: Cargo.toml  applist.desktop
applist/src/: main.rs  package_info.rs
dirlist/: Cargo.toml  dirlist.desktop
dirlist/src/: directory.rs  main.rs
gtk-list-provider/: Cargo.toml
gtk-list-provider/src/: lib.rs  style.css
projlist/: Cargo.toml  projlist.desktop
projlist/src/: config.rs  main.rs  project_info.rs
